# python-multiranges

./: .gitignore  README.md  pyproject.toml
multiranges/: __init__.py  exceptions.py  multiranges.py
tests/: tests.py
